--- a/Главная страница/index.html
+++ b/Главная страница/index.html
@@ -442,7 +442,7 @@
                         <p class="profit__func-var" onclick="toggleActive(this)">Дети</p>
                         <p class="profit__func-var" onclick="toggleActive(this)">Digital</p>
                         <p class="profit__func-var" onclick="toggleActive(this)">Ин. Языки</p>
-                        <p class="profit__func-var active" onclick="toggleActive(this)">Кухни</p>
+                        <p class="profit__func-var activeProfit" onclick="toggleActive(this)">Кухни</p>
                         <p class="profit__func-var" onclick="toggleActive(this)">Мяг. мебель</p>
                         <p class="profit__func-var" onclick="toggleActive(this)">Стройка</p>
                         <p class="profit__func-var" onclick="toggleActive(this)">Интерьер</p>
@@ -460,11 +460,11 @@
 
                                 <div>
                                     <p>Маржа, тг</p>
-                                    <span>3000</span>
+                                    <span id="marga">3000</span>
                                 </div>
                                 <div>
                                     <p>Прибыль, тг</p>
-                                    <span>3000</span>
+                                    <span id="summa">3000</span>
                                 </div>
                             </div>
                             <div class="profit__content-calc-slider">
@@ -517,6 +517,7 @@
                         <div class="case__card">
                             <div class="case__card-img">
                                 <img class="case__card-image1" src="/Главная страница/img/case_1 1.svg" alt="">
+                                <div class="case__card-img-back"></div>
                             </div>
                             <div class="case__card-info">
                                 <div class="case__card-title">
@@ -526,7 +527,17 @@
                                 </div>
                                 <div class="case__line"></div>
                                 <div class="case__card-profit">
-
+                                    <div class="case__card-profit-info">
+                                        <div class="square"></div>
+                                        <p>A</p>
+                                        <img src="/Главная страница/img/Vector 16.svg" alt="">
+                                        <p class="star">*</p>
+                                        <p>B</p>
+                                    </div>
+                                    <div class="case__card-proft-price">
+                                        <p>1 500 00 тг</p>
+                                        <p>10 000 000 тг</p>
+                                    </div>
                                 </div>
                                 <div class="case__line"></div>
                                 <div class="case__card-disc">
@@ -548,6 +559,17 @@
                                 </div>
                                 <div class="case__line"></div>
                                 <div class="case__card-profit">
+                                    <div class="case__card-profit-info">
+                                        <div class="square"></div>
+                                        <p>A</p>
+                                        <img src="/Главная страница/img/Vector 16.svg" alt="">
+                                        <p class="star">*</p>
+                                        <p>B</p>
+                                    </div>
+                                    <div class="case__card-proft-price">
+                                        <p>1 500 00 тг</p>
+                                        <p>10 000 000 тг</p>
+                                    </div>
                                 </div>
                                 <div class="case__line"></div>
                                 <div class="case__card-disc">
@@ -570,7 +592,18 @@
                                 </div>
                                 <div class="case__line"></div>
                                 <div class="case__card-profit">
-                                </div>
+                                    <div class="case__card-profit-info">
+                                        <div class="square"></div>
+                                        <p>A</p>
+                                        <img src="/Главная страница/img/Vector 16.svg" alt="">
+                                        <p class="star">*</p>
+                                        <p>B</p>
+                                    </div>
+                                    <div class="case__card-proft-price">
+                                        <p>1 500 00 тг</p>
+                                        <p>10 000 000 тг</p>
+                                    </div>
+                                </div> 
                                 <div class="case__line"></div>
                                 <div class="case__card-disc">
                                     Мне всегда нравилась идея иметь свой собственный бизнес и зарабатывать столько,
@@ -605,10 +638,10 @@
                                 <p class="step3">9. Запуск рекламы</p>
                             </div>
                             <div class="steps__line-small-top2"></div>
-                            <div class="steps__text">
-                                <p class="step1">13. Масштабирование</p>
-                                <p class="step2">14. Делегирование</p>
-                                <p class="step3">15. Выход > 10 тыс $ чистыми</p>
+                            <div class="steps__text ">
+                                <p class="step1 uni__text">13. Масштабирование</p>
+                                <p class="step2 uni__text">14. Делегирование</p>
+                                <p class="step3 uni__text">15. Выход > 10 тыс $ чистыми</p>
                             </div> 
                         </div>
                         <div class="main__lines">
